Throw up temporary chat

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/pwa": "^2.6.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "firebase": "^5.9.0",
     "nuxt": "^2.4.0",
     "video.js": "^7.4.1",
     "vuetify": "^1.5.5",
