Add basic login logic and basic report page

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/pwa": "^2.6.0",
+    "cookieparser": "^0.1.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "firebase": "^5.9.0",
+    "js-cookie": "^2.2.0",
     "nuxt": "^2.4.0",
     "video.js": "^7.4.1",
     "videojs-contrib-dash": "^2.11.0",
