--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sass-loader": "^7.1.0",
     "video.js": "^7.4.1",
     "videojs-contrib-dash": "^2.11.0",
+    "videojs-contrib-quality-levels": "^2.0.9",
     "vuetify": "^1.5.5",
     "vuetify-loader": "^1.2.1"
   },
