--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "BitWave.tv",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "A &#39;no bs&#39; streaming platform.",
   "author": "Dispatch",
   "private": true,
@@ -13,7 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/google-analytics": "^2.2.0",
-    "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/pwa": "^3.0.0-beta.14",
     "cookieparser": "^0.1.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
