--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "js-cookie": "^2.2.0",
     "nuxt": "^2.4.0",
     "sass-loader": "^7.1.0",
+    "socket.io-client": "^2.2.0",
     "video.js": "^7.4.1",
     "videojs-contrib-dash": "^2.11.0",
     "videojs-contrib-quality-levels": "^2.0.9",
