Attempt to improve chat performance with virtual scrolling

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "video.js": "^7.4.1",
     "videojs-contrib-dash": "^2.11.0",
     "videojs-contrib-quality-levels": "^2.0.9",
+    "vue-markdown": "^2.2.4",
+    "vue-virtual-scroller": "^1.0.0-rc.2",
     "vuetify": "^1.5.9",
     "vuetify-loader": "^1.2.1"
   },
