--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/google-analytics": "^2.2.0",
+    "@nuxtjs/manifest": "^3.0.0-beta.14",
     "@nuxtjs/pwa": "^3.0.0-beta.14",
+    "babel-runtime": "^6.26.0",
     "cookieparser": "^0.1.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
