--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "BitWave.tv",
-  "version": "1.2.2",
+  "version": "1.2.5",
   "description": "A &#39;no bs&#39; streaming platform.",
   "author": "Dispatch",
   "private": true,
@@ -29,6 +29,7 @@
     "video.js": "^7.4.1",
     "videojs-contrib-dash": "^2.11.0",
     "videojs-contrib-quality-levels": "^2.0.9",
+    "vue-clipboard2": "^0.3.0",
     "vue-virtual-scroller": "^1.0.0-rc.2",
     "vuetify": "^1.5.9",
     "vuetify-loader": "^1.2.1"
