Improve meta tags for social media Remove menu bar from mobile Remove old code Update old images Reduce verbose logging Bump site version Update site & projection description Update readme

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "BitWave.tv",
-  "version": "1.2.6",
-  "description": "A &#39;no bs&#39; streaming platform.",
+  "version": "1.2.7",
+  "description": "An open platform live streaming service for creators to freely express themselves.",
   "author": "Dispatch",
   "private": true,
   "scripts": {
