--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "BitWave.tv",
-  "version": "1.2.7",
+  "version": "1.3.0",
   "description": "An open platform live streaming service for creators to freely express themselves.",
   "author": "Dispatch",
   "private": true,
@@ -18,6 +18,7 @@
     "babel-runtime": "^6.26.0",
     "cookieparser": "^0.1.0",
     "cross-env": "^5.2.0",
+    "dashjs": "^2.9.3",
     "express": "^4.16.4",
     "firebase": "^5.9.3",
     "js-cookie": "^2.2.0",
