--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "BitWave.tv",
-  "version": "1.3.2",
+  "name": "bitwave.tv",
+  "version": "1.3.3",
   "description": "An open platform live streaming service for creators to freely express themselves.",
   "author": "Dispatch",
   "private": true,
