--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev:nuxt": "nuxt",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
+    "start:nuxt": "cross-env NODE_ENV=production nuxt start",
     "generate": "nuxt generate"
   },
   "dependencies": {
@@ -20,7 +22,7 @@
     "cross-env": "^5.2.0",
     "dashjs": "^3.0.0",
     "express": "^4.17.1",
-    "firebase": "^6.3.0",
+    "firebase": "^6.3.1",
     "js-cookie": "^2.2.0",
     "marked": "^0.7.0",
     "moment": "^2.24.0",
