--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "firebase": "^6.3.1",
     "js-cookie": "^2.2.0",
+    "jwt-decode": "^2.2.0",
     "marked": "^0.7.0",
     "moment": "^2.24.0",
     "nuxt": "^2.8.1",
