--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/manifest": "^3.0.0-beta.16",
     "@nuxtjs/pwa": "^3.0.0-beta.16",
     "babel-runtime": "^6.26.0",
+    "braintree-web-drop-in": "^1.20.1",
     "cookieparser": "^0.1.0",
     "cross-env": "^5.2.0",
     "dashjs": "^3.0.0",
