Upgrade to vuetify 2

--- a/package.json
+++ b/package.json
@@ -36,14 +36,13 @@
     "videojs-contrib-quality-levels": "^2.0.9",
     "videojs-hls-quality-selector": "^1.1.0",
     "vue-clipboard2": "^0.3.0",
-    "vue-virtual-scroller": "^1.0.0-rc.2",
-    "vuetify": "^1.5.16",
-    "vuetify-loader": "^1.2.2"
+    "vue-virtual-scroller": "^1.0.0-rc.2"
   },
   "devDependencies": {
+    "@nuxtjs/vuetify": "^1.9.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
-    "stylus": "^0.54.5",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2"
   }
 }
