--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitwave.tv",
-  "version": "1.6.14",
+  "version": "1.6.15",
   "description": "An open platform live streaming service for creators to freely express themselves.",
   "author": "Dispatch",
   "private": true,
@@ -19,12 +19,11 @@
     "@nuxtjs/pwa": "^3.0.0-beta.16",
     "babel-runtime": "^6.26.0",
     "braintree-web-drop-in": "^1.20.3",
-    "cookieparser": "^0.1.0",
+    "cookie-universal-nuxt": "^2.0.19",
     "cross-env": "^5.2.0",
     "dashjs": "^3.0.0",
     "express": "^4.17.1",
     "firebase": "^6.3.1",
-    "js-cookie": "^2.2.0",
     "jwt-decode": "^2.2.0",
     "marked": "^0.7.0",
     "moment": "^2.24.0",
