--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/manifest": "^3.0.0-beta.16",
     "@nuxtjs/pwa": "^3.0.0-beta.16",
+    "@nuxtjs/recaptcha": "^0.6.1",
     "babel-runtime": "^6.26.0",
     "braintree-web-drop-in": "^1.20.3",
     "cookie-universal-nuxt": "^2.0.19",
@@ -36,7 +37,6 @@
     "videojs-contrib-quality-levels": "^2.0.9",
     "videojs-hls-quality-selector": "^1.1.0",
     "vue-clipboard2": "^0.3.0",
-    "vue-recaptcha-v3": "^1.7.2",
     "vue-virtual-scroller": "^1.0.0-rc.2"
   },
   "devDependencies": {
