--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "bitwave.tv",
-  "version": "1.7.20",
+  "version": "1.7.21",
   "description": "An open platform live streaming service for creators to freely express themselves.",
   "author": "Dispatch",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nuxt",
+    "dev": "title [DEV] bitwave.tv && cross-env NODE_ENV=development nuxt",
     "dev:express": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "dev:nuxt": "nuxt",
-    "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production nuxt start",
+    "build": "title [BUILD] bitwave.tv && nuxt build",
+    "start": "title [bitwave.tv] && cross-env NODE_ENV=production nuxt start",
     "start:express": "cross-env NODE_ENV=production node server/index.js",
     "start:nuxt": "cross-env NODE_ENV=production nuxt start",
     "generate": "nuxt generate"
