--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/toast": "^3.3.0",
     "babel-runtime": "^6.26.0",
     "braintree-web-drop-in": "^1.21.0",
+    "chart.js": "^2.9.3",
     "cookie-universal-nuxt": "^2.1.0",
     "cross-env": "^6.0.3",
     "dashjs": "^3.0.0",
@@ -39,13 +40,14 @@
     "videojs-contrib-dash": "^2.11.0",
     "videojs-contrib-quality-levels": "^2.0.9",
     "videojs-hls-quality-selector": "^1.1.0",
+    "vue-chartjs": "^3.5.0",
     "vue-clipboard2": "^0.3.1",
     "vue-virtual-scroller": "^1.0.0-rc.2"
   },
   "devDependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/vuetify": "^1.9.1",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "nodemon": "^2.0.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2"
