--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "cross-env NODE_ENV=production nuxt start",
     "start:express": "cross-env NODE_ENV=production node server/index.js",
     "start:nuxt": "cross-env NODE_ENV=production nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "docker:build": "docker build -t bitwavetv/bitwave:latest .",
+    "docker:push": "docker push bitwavetv/bitwave:latest"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.9.5",
