--- a/bitwave-deployment.yaml
+++ b/bitwave-deployment.yaml
@@ -17,5 +17,6 @@ spec:
       containers:
         - name: bitwave-node
           image: bitwavetv/bitwave:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 3000
