--- a/bitwave-pod.yaml
+++ b/bitwave-pod.yaml
@@ -8,5 +8,6 @@ spec:
   containers:
     - name: bitwave-node
       image: bitwavetv/bitwave:latest
+      imagePullPolicy: Always
       ports:
         - containerPort: 3000
