--- a/bitwave-deployment.yaml
+++ b/bitwave-deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: bitwave
     spec:
+      hostPort: true
       containers:
         - name: bitwave-node
           image: bitwavetv/bitwave:latest
