--- a/bitwave-deployment.yaml
+++ b/bitwave-deployment.yaml
@@ -20,5 +20,5 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
-              hostPort: true
+              hostPort: 3000
               protocol: TCP
