--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitwave.tv",
-  "version": "1.8.61",
+  "version": "1.9.0",
   "description": "An open platform live streaming service for creators to freely express themselves.",
   "author": "Dispatch",
   "scripts": {
@@ -11,11 +11,14 @@
     "start": "cross-env NODE_ENV=production nuxt start",
     "start:express": "cross-env NODE_ENV=production node server/index.js",
     "start:nuxt": "cross-env NODE_ENV=production nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "docker:build": "docker build -t bitwavetv/bitwave:latest .",
+    "docker:push": "docker push bitwavetv/bitwave:latest"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.9.5",
     "@nuxtjs/device": "^1.2.6",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/google-analytics": "^2.2.3",
     "@nuxtjs/manifest": "^3.0.0-beta.16",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
@@ -44,7 +47,6 @@
     "vue-virtual-scroller": "^1.0.0-rc.2"
   },
   "devDependencies": {
-    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/vuetify": "^1.9.1",
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.1",
