Add rollout to npm package

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start:nuxt": "cross-env NODE_ENV=production nuxt start",
     "generate": "nuxt generate",
     "docker:build": "docker build -t bitwavetv/bitwave:latest .",
-    "docker:push": "docker push bitwavetv/bitwave:latest"
+    "docker:push": "docker push bitwavetv/bitwave:latest",
+    "k8:rollout": "kubectl rollout restart deployment bitwave-app -n bitwave-node"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.9.5",
