--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "jwt-decode": "^2.2.0",
     "marked": "^0.7.0",
     "moment": "^2.24.0",
-    "nuxt": "^2.11.0",
+    "nuxt": "^2.12.2",
     "sass-loader": "^8.0.2",
     "socket.io-client": "^2.3.0",
     "video.js": "^7.7.5",
@@ -51,6 +51,7 @@
     "vue-virtual-scroller": "^1.0.0-rc.2"
   },
   "devDependencies": {
+    "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/vuetify": "^1.9.1",
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.2",
