--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "nuxt": "^2.12.2",
     "sass-loader": "^8.0.2",
     "socket.io-client": "^2.3.0",
-    "video.js": "^7.6.6",
+    "video.js": "github:bitwave-tv/video.js#perf/fix-request-animation-frame",
     "videojs-contrib-dash": "^2.11.0",
     "videojs-contrib-quality-levels": "^2.0.9",
     "videojs-hls-quality-selector": "^1.1.1",
