--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "cross-env": "^7.0.2",
     "dashjs": "^3.0.3",
     "express": "^4.17.1",
-    "firebase": "^7.13.2",
+    "firebase": "^7.14.2",
     "jwt-decode": "^2.2.0",
     "marked": "^0.7.0",
     "moment": "^2.24.0",
     "nuxt": "^2.12.2",
     "sass-loader": "^8.0.2",
     "socket.io-client": "^2.3.0",
-    "video.js": "github:bitwave-tv/video.js#dev",
+    "video.js": "npm:@bitwave/video.js@^7.8.2",
     "videojs-contrib-dash": "^2.11.0",
     "videojs-contrib-quality-levels": "^2.0.9",
     "videojs-hls-quality-selector": "^1.1.1",
