--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An open platform live streaming service for creators to freely express themselves.",
   "author": "Dispatch",
   "scripts": {
-    "dev": "title [DEV] bitwave.tv && cross-env NODE_ENV=development nuxt",
+    "dev": "cross-env NODE_ENV=development nuxt",
     "dev:express": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "dev:nuxt": "nuxt",
     "build": "nuxt build",
