--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxtjs/manifest": "^3.0.0-beta.16",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "@nuxtjs/recaptcha": "^0.6.2",
+    "@nuxtjs/sentry": "^4.0.3",
     "@nuxtjs/toast": "^3.3.0",
     "babel-runtime": "^6.26.0",
     "braintree-web-drop-in": "^1.22.1",
