--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitwave.tv",
-  "version": "1.20.1",
+  "version": "1.20.2",
   "description": "An open platform live streaming service for creators to freely express themselves.",
   "author": "Dispatch",
   "scripts": {
@@ -29,6 +29,7 @@
     "@nuxtjs/recaptcha": "^0.6.2",
     "@nuxtjs/sentry": "^4.0.3",
     "@nuxtjs/toast": "^3.3.0",
+    "@sentry/browser": "^5.16.1",
     "babel-runtime": "^6.26.0",
     "braintree-web-drop-in": "^1.22.1",
     "chart.js": "^2.9.3",
