--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "@nuxtjs/recaptcha": "^0.6.2",
     "@nuxtjs/sentry": "^4.1.3",
     "@nuxtjs/toast": "^3.3.0",
-    "@sentry/browser": "^5.19.0",
-    "@videojs/http-streaming": "^1.13.3",
+    "@sentry/browser": "^5.19.1",
+    "@videojs/http-streaming": "^2.0.0",
     "babel-runtime": "^6.26.0",
-    "braintree-web-drop-in": "^1.22.1",
+    "braintree-web-drop-in": "^1.23.0",
     "chart.js": "^2.9.3",
     "cookie-universal-nuxt": "^2.1.4",
     "cross-env": "^7.0.2",
@@ -41,11 +41,11 @@
     "firebase": "^7.15.5",
     "jwt-decode": "^2.2.0",
     "marked": "^0.7.0",
-    "moment": "^2.26.0",
+    "moment": "^2.27.0",
     "nuxt": "^2.12.2",
     "sass-loader": "^8.0.2",
     "socket.io-client": "^2.3.0",
-    "video.js": "npm:@bitwave/video.js@^7.8.5",
+    "video.js": "^7.8.4",
     "videojs-contrib-dash": "^2.11.0",
     "videojs-contrib-quality-levels": "^2.0.9",
     "videojs-hls-quality-selector": "^1.1.1",
