--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "rollout:status": "kubectl rollout status deployment/bitwave-app -n bitwave-node"
   },
   "dependencies": {
+    "@bitwave/chat-client": "git+https://github.com/bitwave-tv/chat-client.git#dev",
     "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/component-cache": "^1.1.5",
     "@nuxtjs/device": "^1.2.7",
