--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "marked": "^0.7.0",
     "moment": "^2.27.0",
     "nuxt": "^2.13.3",
+    "nuxt-stripe-module": "^2.1.0",
     "sass-loader": "^9.0.2",
     "socket.io-client": "^2.3.0",
     "video.js": "^7.9.1",
