reduce toLowerCase() calls

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,14 @@
+# 3000 for production
+# 5000 for development on server
+port=3000
+
 APP_DEBUG=false
 BITWAVE_ENV=production
+
+IPINFO_TOKEN=idontthinkiusethisanymore
+SENTRY_DSN=SENTRY_DSN_FOR_SENTRY_STUFF
+SENTRY_AUTH_TOKEN=SENTRY_TOKEN_FOR_SENTRY_STUFF
+SENTRY_ORG=SENTRY_ORG
+
+# STRIPE_PUBLISHABLE_KEY=STRIPE_API_KEY_TEST_ENV
+# STRIPE_PUBLISHABLE_KEY=STRIPE_API_KEY_LIVE_ENV
