--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "videojs-contrib-dash": "^2.11.0",
     "videojs-contrib-quality-levels": "^2.0.9",
     "videojs-hls-quality-selector": "^1.1.1",
+    "vue-awesome-countdown": "^1.0.26",
     "vue-chartjs": "^3.5.0",
     "vue-clipboard2": "^0.3.1"
   },
