adds support for hCaptcha
Adds hCaptcha to registration form

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ SENTRY_ORG=SENTRY_ORG
 
 # STRIPE_PUBLISHABLE_KEY=STRIPE_API_KEY_TEST_ENV
 # STRIPE_PUBLISHABLE_KEY=STRIPE_API_KEY_LIVE_ENV
+
+HCAPTCHA_SITE_KEY=HCAPTCHA_SITE_KEY
