--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitwave.tv",
-  "version": "1.23.1",
+  "version": "1.23.3",
   "description": "An open platform live streaming service for creators to freely express themselves.",
   "author": "Dispatch",
   "scripts": {
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@bitwave/chat-client": "^0.3.5",
+    "@hcaptcha/vue-hcaptcha": "^0.2.2",
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/component-cache": "^1.1.6",
     "@nuxtjs/device": "^1.2.7",
