--- a/.github/workflows/manual-dev-deploy.yml
+++ b/.github/workflows/manual-dev-deploy.yml
@@ -18,7 +18,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
+  build-artifact:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     
@@ -36,31 +36,30 @@ jobs:
         run: |
           npm ci
           npm run build
-   
-  upload:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+      
+      - uses: actions/upload-artifact@v2
+      - name: Create Artifact
+        with:
+          name: dev-build
+          path: .nuxt/*
+          
+      - name: Copy file via scp
+        uses: appleboy/scp-action@master
+        env:
+          HOST: ${{ secrets.HOST }}
+          USERNAME: ${{ secrets.USERNAME }}
+          PORT: ${{ secrets.PORT }}
+          KEY: ${{ secrets.SSHKEY }}
+        with:
+          source: dev-build
+          target: "/src/dev.bitwave.tv/current"
 
-    steps:
-    - uses: actions/checkout@v1
-
-    - name: Copy file via scp
-      uses: appleboy/scp-action@master
-      env:
-        HOST: ${{ secrets.HOST }}
-        USERNAME: ${{ secrets.USERNAME }}
-        PORT: ${{ secrets.PORT }}
-        KEY: ${{ secrets.SSHKEY }}
-      with:
-        source: "."
-        target: "/src/dev.bitwave.tv/current"
-
-    - name: Executing remote  command
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        USERNAME: ${{ secrets.USERNAME }}
-        PORT: ${{ secrets.PORT }}
-        KEY: ${{ secrets.SSHKEY }}
-        script: pm2 restart dev.bitwave.tv
+      - name: Executing remote  command
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          USERNAME: ${{ secrets.USERNAME }}
+          PORT: ${{ secrets.PORT }}
+          KEY: ${{ secrets.SSHKEY }}
+          script: pm2 restart dev.bitwave.tv
 
