--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "stylus": "^0.54.8",
-    "stylus-loader": "^3.0.2"
+    "stylus-loader": "^3.0.2",
+    "vue": "^2.6.12"
   }
 }
