--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "videojs-contrib-dash": "^2.11.0",
     "videojs-contrib-quality-levels": "^2.0.9",
     "videojs-hls-quality-selector": "^1.1.4",
+    "videojs-youtube": "^2.6.1",
     "vue-awesome-countdown": "^1.1.2",
     "vue-chartjs": "^3.5.1",
     "vue-clipboard2": "^0.3.1"
