--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dashjs": "^3.1.3",
     "express": "^4.17.1",
     "firebase": "^7.24.0",
+    "heatmap.js": "^2.0.5",
     "jwt-decode": "^3.0.0",
     "marked": "^0.7.0",
     "moment": "^2.29.1",
