Update env vars
adds additional .env vars to prevent CICD failures caused by runtime checks ensure our .env variables are actually set.

--- a/.github/workflows/nodejs-build.yml
+++ b/.github/workflows/nodejs-build.yml
@@ -24,3 +24,6 @@ jobs:
         npm test --if-present
       env:
         CI: true
+        APP_DEBUG: true
+        STRIPE_PUBLISHABLE_KEY: pk_test_key
+        BRAINTREE_PUBLIC_KEY: pk_test_key
